[package]
authors = ["Xuanwo <github@xuanwo.io>>"]
categories = ["command-line-utilities"]
description = "Replace with description"
documentation = "https://docs.rs/hdfs-rpc"
repository = "https://github.com/Xuanwo/hdfs-rpc"
edition = "2021"
license = "Apache-2.0"
name = "hdfs-rpc"
version = "0.0.0"

[dependencies]
prost = "0.10.4"

[build-dependencies]
prost-build = "0.11.2"
